[#1] Fix top positioning for overflow

--- a/packages/css-tables/src/_overflow.css
+++ b/packages/css-tables/src/_overflow.css
@@ -8,8 +8,16 @@
   --zd-table__row__cell__overflow-focused-background-color: var(--zd-color-platinum);
   --zd-table__row__cell__overflow-hovered-background-image: svg-load('26-ellipsis.svg', color: var(--zd-color-dark-gray));
   --zd-table__row--header__cell__overflow-top: calc(calc(var(--zd-table__row--header-height) / 2) - 1em);
-  --zd-table__row__cell--overflow__menu-top: calc(var(--zd-table__row-height) - 5px);
-  --zd-table__row--header__cell--overflow__menu-top: calc(var(--zd-table__row--header-height) - 9px);
+  --zd-table--lg__row__cell__overflow-top: calc(calc(var(--zd-table--lg__row-height) / 2) - 1em);
+  --zd-table--sm__row__cell__overflow-top: calc(calc(var(--zd-table--sm__row-height) / 2) - 1em);
+  --zd-table--lg__row--header__cell__overflow-top: calc(calc(var(--zd-table--lg__row--header-height) / 2) - 1em);
+  --zd-table--sm__row--header__cell__overflow-top: calc(calc(var(--zd-table--sm__row--header-height) / 2) - 1em);
+  --zd-table__row__cell--overflow__menu-top: calc(calc(var(--zd-table__row-height) / 2 + 1) + 1em);
+  --zd-table__row--header__cell--overflow__menu-top: calc(calc(var(--zd-table__row--header-height) / 2 + 1px) + 1em);
+  --zd-table--lg__row__cell--overflow__menu-top: calc(calc(var(--zd-table--lg__row-height) / 2 + 1) + 1em);
+  --zd-table--sm__row__cell--overflow__menu-top: calc(calc(var(--zd-table--sm__row-height) / 2 + 1) + 1em);
+  --zd-table--lg__row--header__cell--overflow__menu-top: calc(calc(var(--zd-table--lg__row--header-height) / 2 + 1) + 1em);
+  --zd-table--sm__row--header__cell--overflow__menu-top: calc(calc(var(--zd-table--sm__row--header-height) / 2 + 1) + 1em);
 }
 
 .c-table__row__cell--overflow {
@@ -63,6 +71,16 @@
   top: var(--zd-table__row--header__cell__overflow-top);
 }
 
+.c-table--lg .c-table__row__cell__overflow::before,
+.c-table--lg .c-table__row__cell__overflow::after {
+  top: var(--zd-table--lg__row__cell__overflow-top);
+}
+
+.c-table--sm .c-table__row__cell__overflow::before,
+.c-table--sm .c-table__row__cell__overflow::after {
+  top: var(--zd-table--sm__row__cell__overflow-top);
+}
+
 @custom-selector :--table__row__cell__overflow-hovered
   .is-hovered,
   .is-focused,
@@ -103,6 +121,16 @@
   opacity: 0;
 }
 
+.c-table--lg .c-table__row--header .c-table__row__cell__overflow::before,
+.c-table--lg .c-table__row--header .c-table__row__cell__overflow::after {
+  top: var(--zd-table--lg__row--header__cell__overflow-top);
+}
+
+.c-table--sm .c-table__row--header .c-table__row__cell__overflow::before,
+.c-table--sm .c-table__row--header .c-table__row__cell__overflow::after {
+  top: var(--zd-table--sm__row--header__cell__overflow-top);
+}
+
 .c-table__row__cell--overflow .c-menu {
   top: var(--zd-table__row__cell--overflow__menu-top);
   right: calc(100% - var(--zd-table__row__cell__overflow-size));
@@ -111,3 +139,23 @@
 .c-table__row--header .c-table__row__cell--overflow .c-menu {
   top: var(--zd-table__row--header__cell--overflow__menu-top);
 }
+
+.c-table--lg .c-table__row__cell--overflow .c-menu {
+  top: var(--zd-table--lg__row__cell--overflow__menu-top);
+}
+
+.c-table--sm .c-table__row__cell--overflow .c-menu {
+  top: var(--zd-table--sm__row__cell--overflow__menu-top);
+}
+
+/* stylelint-disable max-line-length, selector-max-compound-selectors, selector-max-specificity */
+
+.c-table--lg .c-table__row--header .c-table__row__cell--overflow .c-menu {
+  top: var(--zd-table--lg__row--header__cell--overflow__menu-top);
+}
+
+.c-table--sm .c-table__row--header .c-table__row__cell--overflow .c-menu {
+  top: var(--zd-table--sm__row--header__cell--overflow__menu-top);
+}
+
+/* stylelint-enable max-line-length, selector-max-compound-selectors, selector-max-specificity */
